# DPFProto

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md
benchmarks/: nvcompdx_lz4_bench.cu
config/: cufile.json
data/compress_golap/: throughput.txt
params/: cufile.json
samples/: CMakeLists.txt  bam_queue_info.cu  bam_sp_test.cu  io_decomp_latency.cu  io_pipeline_bench.cu  lz4_decomp_bench.cu
scripts/: bench.sh  common.sh  reproduce_ssb.sh  reproduce_tpch.sh  ssb_check_q3q4.sh  ssb_chunk_size_sweep.sh  ssb_perf_summary.py  ssb_run_all.sh  ssb_verify_answers.py  ssb_verify_bench.sh  test_tpch.sh  test_uncomp.sh  tpch_chunk_size_sweep.sh  tpch_compress_sideways.sh  tpch_run_all.sh  tpch_verify_answers.py
scripts/golap/: 01_sideways_pruning.sh  02_checksum.sh  02_ssb_sideways_pruning.sh
scripts/setup/: install_duckdb.sh  install_nvidia_libs.sh  probe_nvme.sh
scripts/ssb/: gen_answers.sh  gen_revenue_answers.sh  run_dbgen.sh
scripts/tmp/: verify_sideways.sh
scripts/tpch/: dbgen.sh  gen_answers.sh  run_dbgen.sh
src/: cli.cu  gds_test.cu  loader_cli.cu  main.cu  ssb_cli.cu  ssb_loader_cli.cu  ssb_loader_main.cu  ssb_main.cu  tpch_checker_main.cu  tpch_cli.cu  tpch_loader_cli.cu  tpch_loader_main.cu  tpch_main.cu
src/common/: common.cu  compression.cuh  cpu_usage.cu  err.h  error.cu  filter.cuh  fsst_host.cpp  fsst_host.h  fsst_page.h  gpu_usage.cu  loader.cu  lz4_helper.cuh  pack.cu  pag.h  pag_core.h  page.cu  primitive_c.cu  primitive_cuda.cu  primitive_cufile.cu  pruning.cuh  rec.h  shim_nvml.cu  ssb_loader.cu  tpch_loader.cu  xtn.h  zonemap_compact.cuh
src/hash/: murmur2.cu  table.cu
src/kernel/: binpack_kernel.cuh  econfig.h  pack.cuh  rlebinpack_kernel.cuh
src/kernel/ssb/: dim_build.cuh  flatten.cu  flatten.cuh  q11.cu  q1x.cuh  q2x.cuh  q3x.cuh  q4x.cuh
src/kernel/ssb/comp/: q11.cu
src/kernel/tpch/: gpu_pag.cuh  gpu_rec.cuh  helper.cuh  q1.cuh  q13.cuh  q13_scan.cu  q16.cuh  q16_scan.cu  q1_scan.cu  q3.cuh  q3_grace.cu  q3_scan.cu  q5.cuh  q5_scan.cu  q6.cu  q6.cuh  q6_col.cu  q6_scan.cu  q6_scan.cuh  revenue.cuh  revenue_col.cu  revenue_scan.cu  revenue_scan.cuh  scan.cu  scan.cuh
src/metadata/: metadata.h  ssb_metadata.h
src/nvcomp/: decompressor.cuh
src/old/: bench_device.cu  bench_device_async.cu  bench_device_batch.cu  bench_host.cu  bench_host_async.cu  bench_host_async_device.cu  bench_host_device.cu  bench_host_device_async.cu  bench_transfer.cu  bench_transfer_async.cu
src/q6/: device_batch_io.cu  device_batch_sync.cu  device_batch_sync_compressed.cu  host_async_io.cu
src/scan/: device_batch_sync.cu  device_batch_sync_compressed.cu
src/schema/: customer.cu  lineitem.cu  orders.cu  ssb_tables.cuh  table.h  test_tables.cuh  tpch_tables.cuh
src/ssb/: bam_lz4_fused_ssb.cu  bam_lz4_fused_ssb.cuh  bam_pfor_decomp_warp.cuh  bam_pfor_fused_ssb.cu  bam_pfor_fused_ssb.cuh  datapathfusion.cu  gidp.cu  gidp_bam.cu  gidp_bam_fusion.cu
src/ssb/check/: host_count.cu
src/ssb/q11/: device.cu  device_compress.cu  host.cu  host_compress.cu
src/tpch/: bam_bulk_read.cu  bam_bulk_read.cuh  bam_io_contention_bench.cu  bam_io_contention_bench.cuh  bam_io_device.cu  bam_io_device.cuh  bam_io_device_q1.cu  bam_io_device_q1.cuh  bam_kernel.cu  bam_kernel.cuh  bam_lz4_decomp.cu  bam_lz4_decomp.cuh  bam_lz4_decomp_bench.cu  bam_lz4_decomp_bench.cuh  bam_lz4_fused_q1.cu  bam_lz4_fused_q1.cuh  bam_lz4_fused_q13_comment.cu  bam_lz4_fused_q13_comment.cuh  bam_lz4_fused_q13_comment_v2.cu  bam_lz4_fused_q13_comment_v2.cuh  bam_lz4_fused_q16_part.cu  bam_lz4_fused_q16_part.cuh  bam_lz4_fused_q16_partsupp.cu  bam_lz4_fused_q16_partsupp.cuh  bam_lz4_fused_q16_phase01.cu  bam_lz4_fused_q16_phase01.cuh  bam_lz4_fused_q16_ptype.cu  bam_lz4_fused_q16_ptype.cuh  bam_lz4_fused_q3_lineitem.cu  bam_lz4_fused_q3_lineitem.cuh  bam_lz4_fused_q3_mktseg.cu  bam_lz4_fused_q3_mktseg.cuh  bam_lz4_fused_q3_orders.cu  bam_lz4_fused_q3_orders.cuh  bam_lz4_fused_q5_dim.cu  bam_lz4_fused_q5_dim.cuh  bam_lz4_fused_q5_lineitem.cu  bam_lz4_fused_q5_lineitem.cuh  bam_lz4_fused_q5_lineitem_v2.cu  bam_lz4_fused_q5_lineitem_v2.cuh  (+34 more)
src/tpch/check/: device_batch_sync.cu  mem.cu
systems/: 01_setup.sh  02_load.sh  03_run_benchmark.sh  README.md  check_gds.sh  common.sh  run_all.sh
systems/duckdb/: 10_LOAD_PARQUET_SSB.sh  10_LOAD_PARQUET_TPCH.sh  20_run_query.sh  20_run_ssb_query.sh  common.sh  load.sh  run_benchmark.sh  run_ssb_queries.sh  run_ssb_revenue.sh  run_tpch_queries.sh  setup.sh
systems/duckdb/queries/: q1.sql  q13.sql  q16.sql  q3.sql  q5.sql  q6.sql
systems/duckdb/ssb_queries/: q13.sql  q21.sql  q23.sql  q31.sql  q32.sql  q33.sql  q34.sql  q41.sql  q42.sql  q43.sql
systems/polars/: bench.py  run_benchmark.sh  setup.sh
systems/spark-rapids/: .gitignore  run_benchmark.sh  run_ssb_benchmark.sh  run_tpch_benchmark.sh  setup.sh  ssb_benchmark.py  tpch_benchmark.py
systems/spark-rapids/conf/: getGpusResources.sh  log4j2.properties  spark-defaults.conf  spark-env.sh
systems/spark-rapids/queries/: q1.sql  q13.sql  q16.sql  q3.sql  q5.sql  q6.sql
systems/spark-rapids/ssb_queries/: q11.sql  q12.sql  q22.sql
test/fsst/: Makefile  README.md  cpu_fsst_avx512.cpp  cpu_fsst_avx512.h  fsst_device.cuh  fsst_host.cpp  fsst_host.h  fsst_page.h  fsst_vchar_test.cu
